--- a/index.html
+++ b/index.html
@@ -13,30 +13,30 @@
     </nav>
     <main class="container-fluid">
         <div class="row">
-        <div class="col-12 col-md-3 p-2">
-            <form class="d-inline-block" id="searchForm">
-                <label for="inputCity">Search for a city:</label>
-                <input type="text" class="form-control" id="inputCity" placeholder="Search a city here!" />
-                <input type="submit" class="btn btn-primary" value="Submit" id="searchBtn">
-            </form>
-            <div id="pastSearch">
-                <ul>Past Searches: </ul>
-                <!-- <button type="button" class="btn btn-secondary">
-                    Columbus, OH
-                </button> -->
+            <div class="col-12 col-md-3 p-2">
+                <form class="d-inline-block m-1" id="searchForm">
+                    <label for="inputCity" class="m-1">Search for a city:</label>
+                    <input type="text" class="form-control m-1" id="inputCity" placeholder="Search a city here!" />
+                    <input type="submit" class="btn btn-primary m-2" value="Submit" id="searchBtn">
+                </form>
+                <div id="pastSearch">
+                    <ul>Past Searches: </ul>
+                    <!-- Example: <button type="button" class="btn btn-secondary">
+                        Columbus, OH
+                    </button> -->
+                </div>
+            </div>
+            <div class="col-12 col-md-9" id="cityData">
+                <div id="oneDay">
+                    <h2 id="cityName"></h2>
+                    <div id="cityDetails"></div>
+                </div>
+                <div id="fiveDay">
+                    <h2 id="fiveDayTitle"></h2>
+                    <div id="forecastCards"></div>
+                </div>
             </div>
         </div>
-        <div class="col-12 col-md-9" id="cityData">
-            <div id="oneDay">
-                <h2 id="cityName"></h2>
-                <div id="cityDetails"></div>
-            </div>
-            <div id="fiveDay">
-                <h2 id="fiveDayTitle"></h2>
-                <div id="forecastCards"></div>
-            </div>
-        </div>
-    </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
